parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     program -> <empty>
Rule 4     block -> NEWLINE INDENT groupstat DEDENT
Rule 5     groupstat -> groupstat statement
Rule 6     groupstat -> <empty>
Rule 7     statement -> command NEWLINE
Rule 8     command -> IFBLOCK RIGHT block ENDIF
Rule 9     command -> IFBLOCK DOWN block ENDIF
Rule 10    command -> IFBLOCK UP block ENDIF
Rule 11    command -> IFBLOCK LEFT block ENDIF
Rule 12    command -> IFBLOCK error block ENDIF
Rule 13    command -> IFBLOCK error groupstat ENDIF
Rule 14    command -> IFBLOCK RIGHT error groupstat ENDIF
Rule 15    command -> IFBLOCK DOWN error groupstat ENDIF
Rule 16    command -> IFBLOCK UP error groupstat ENDIF
Rule 17    command -> IFBLOCK LEFT error
Rule 18    command -> REPEAT expr block ENDREPEAT
Rule 19    command -> REPEAT error block ENDREPEAT
Rule 20    command -> REPEAT error groupstat ENDREPEAT
Rule 21    command -> REPEAT expr error groupstat ENDREPEAT
Rule 22    command -> PROCEDURE ID block ENDPROC
Rule 23    command -> PROCEDURE error block ENDPROC
Rule 24    command -> PROCEDURE error groupstat ENDPROC
Rule 25    command -> PROCEDURE ID error groupstat ENDPROC
Rule 26    command -> CALL ID
Rule 27    command -> CALL error
Rule 28    command -> RIGHT expr
Rule 29    command -> LEFT expr
Rule 30    command -> UP expr
Rule 31    command -> DOWN expr
Rule 32    command -> RIGHT error
Rule 33    command -> LEFT error
Rule 34    command -> UP error
Rule 35    command -> DOWN error
Rule 36    command -> SET ID EQUALS expr
Rule 37    command -> SET error
Rule 38    command -> SET ID error
Rule 39    command -> SET ID EQUALS error
Rule 40    expr -> expr PLUS factor
Rule 41    expr -> expr MINUS factor
Rule 42    expr -> factor
Rule 43    expr -> MINUS expr
Rule 44    factor -> factor TIMES fact
Rule 45    factor -> factor DIVIDE fact
Rule 46    factor -> fact
Rule 47    fact -> NUMBER
Rule 48    fact -> ID
Rule 49    fact -> LPAREN expr RPAREN

Terminals, with rules where they appear

CALL                 : 26 27
DEDENT               : 4
DIVIDE               : 45
DOWN                 : 9 15 31 35
ENDIF                : 8 9 10 11 12 13 14 15 16
ENDPROC              : 22 23 24 25
ENDREPEAT            : 18 19 20 21
EQUALS               : 36 39
ID                   : 22 25 26 36 38 39 48
IFBLOCK              : 8 9 10 11 12 13 14 15 16 17
INDENT               : 4
LEFT                 : 11 17 29 33
LPAREN               : 49
MINUS                : 41 43
NEWLINE              : 4 7
NUMBER               : 47
PLUS                 : 40
PROCEDURE            : 22 23 24 25
REPEAT               : 18 19 20 21
RIGHT                : 8 14 28 32
RPAREN               : 49
SET                  : 36 37 38 39
TIMES                : 44
UP                   : 10 16 30 34
WS                   : 
error                : 12 13 14 15 16 17 19 20 21 23 24 25 27 32 33 34 35 37 38 39

Nonterminals, with rules where they appear

block                : 8 9 10 11 12 18 19 22 23
command              : 7
expr                 : 18 21 28 29 30 31 36 40 41 43 49
fact                 : 44 45 46
factor               : 40 41 42 44 45
groupstat            : 4 5 13 14 15 16 20 21 24 25
program              : 1 0
statement            : 1 2 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) program -> .
    (7) statement -> . command NEWLINE
    (8) command -> . IFBLOCK RIGHT block ENDIF
    (9) command -> . IFBLOCK DOWN block ENDIF
    (10) command -> . IFBLOCK UP block ENDIF
    (11) command -> . IFBLOCK LEFT block ENDIF
    (12) command -> . IFBLOCK error block ENDIF
    (13) command -> . IFBLOCK error groupstat ENDIF
    (14) command -> . IFBLOCK RIGHT error groupstat ENDIF
    (15) command -> . IFBLOCK DOWN error groupstat ENDIF
    (16) command -> . IFBLOCK UP error groupstat ENDIF
    (17) command -> . IFBLOCK LEFT error
    (18) command -> . REPEAT expr block ENDREPEAT
    (19) command -> . REPEAT error block ENDREPEAT
    (20) command -> . REPEAT error groupstat ENDREPEAT
    (21) command -> . REPEAT expr error groupstat ENDREPEAT
    (22) command -> . PROCEDURE ID block ENDPROC
    (23) command -> . PROCEDURE error block ENDPROC
    (24) command -> . PROCEDURE error groupstat ENDPROC
    (25) command -> . PROCEDURE ID error groupstat ENDPROC
    (26) command -> . CALL ID
    (27) command -> . CALL error
    (28) command -> . RIGHT expr
    (29) command -> . LEFT expr
    (30) command -> . UP expr
    (31) command -> . DOWN expr
    (32) command -> . RIGHT error
    (33) command -> . LEFT error
    (34) command -> . UP error
    (35) command -> . DOWN error
    (36) command -> . SET ID EQUALS expr
    (37) command -> . SET error
    (38) command -> . SET ID error
    (39) command -> . SET ID EQUALS error

  ! shift/reduce conflict for IFBLOCK resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for RIGHT resolved as shift
  ! shift/reduce conflict for LEFT resolved as shift
  ! shift/reduce conflict for UP resolved as shift
  ! shift/reduce conflict for DOWN resolved as shift
  ! shift/reduce conflict for SET resolved as shift
    $end            reduce using rule 3 (program -> .)
    IFBLOCK         shift and go to state 4
    REPEAT          shift and go to state 9
    PROCEDURE       shift and go to state 10
    CALL            shift and go to state 11
    RIGHT           shift and go to state 5
    LEFT            shift and go to state 8
    UP              shift and go to state 7
    DOWN            shift and go to state 6
    SET             shift and go to state 12

  ! IFBLOCK         [ reduce using rule 3 (program -> .) ]
  ! REPEAT          [ reduce using rule 3 (program -> .) ]
  ! PROCEDURE       [ reduce using rule 3 (program -> .) ]
  ! CALL            [ reduce using rule 3 (program -> .) ]
  ! RIGHT           [ reduce using rule 3 (program -> .) ]
  ! LEFT            [ reduce using rule 3 (program -> .) ]
  ! UP              [ reduce using rule 3 (program -> .) ]
  ! DOWN            [ reduce using rule 3 (program -> .) ]
  ! SET             [ reduce using rule 3 (program -> .) ]

    program                        shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 3

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (7) statement -> . command NEWLINE
    (8) command -> . IFBLOCK RIGHT block ENDIF
    (9) command -> . IFBLOCK DOWN block ENDIF
    (10) command -> . IFBLOCK UP block ENDIF
    (11) command -> . IFBLOCK LEFT block ENDIF
    (12) command -> . IFBLOCK error block ENDIF
    (13) command -> . IFBLOCK error groupstat ENDIF
    (14) command -> . IFBLOCK RIGHT error groupstat ENDIF
    (15) command -> . IFBLOCK DOWN error groupstat ENDIF
    (16) command -> . IFBLOCK UP error groupstat ENDIF
    (17) command -> . IFBLOCK LEFT error
    (18) command -> . REPEAT expr block ENDREPEAT
    (19) command -> . REPEAT error block ENDREPEAT
    (20) command -> . REPEAT error groupstat ENDREPEAT
    (21) command -> . REPEAT expr error groupstat ENDREPEAT
    (22) command -> . PROCEDURE ID block ENDPROC
    (23) command -> . PROCEDURE error block ENDPROC
    (24) command -> . PROCEDURE error groupstat ENDPROC
    (25) command -> . PROCEDURE ID error groupstat ENDPROC
    (26) command -> . CALL ID
    (27) command -> . CALL error
    (28) command -> . RIGHT expr
    (29) command -> . LEFT expr
    (30) command -> . UP expr
    (31) command -> . DOWN expr
    (32) command -> . RIGHT error
    (33) command -> . LEFT error
    (34) command -> . UP error
    (35) command -> . DOWN error
    (36) command -> . SET ID EQUALS expr
    (37) command -> . SET error
    (38) command -> . SET ID error
    (39) command -> . SET ID EQUALS error

    IFBLOCK         shift and go to state 4
    REPEAT          shift and go to state 9
    PROCEDURE       shift and go to state 10
    CALL            shift and go to state 11
    RIGHT           shift and go to state 5
    LEFT            shift and go to state 8
    UP              shift and go to state 7
    DOWN            shift and go to state 6
    SET             shift and go to state 12

    statement                      shift and go to state 13
    command                        shift and go to state 3

state 2

    (2) program -> statement .

    IFBLOCK         reduce using rule 2 (program -> statement .)
    REPEAT          reduce using rule 2 (program -> statement .)
    PROCEDURE       reduce using rule 2 (program -> statement .)
    CALL            reduce using rule 2 (program -> statement .)
    RIGHT           reduce using rule 2 (program -> statement .)
    LEFT            reduce using rule 2 (program -> statement .)
    UP              reduce using rule 2 (program -> statement .)
    DOWN            reduce using rule 2 (program -> statement .)
    SET             reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (7) statement -> command . NEWLINE

    NEWLINE         shift and go to state 14


state 4

    (8) command -> IFBLOCK . RIGHT block ENDIF
    (9) command -> IFBLOCK . DOWN block ENDIF
    (10) command -> IFBLOCK . UP block ENDIF
    (11) command -> IFBLOCK . LEFT block ENDIF
    (12) command -> IFBLOCK . error block ENDIF
    (13) command -> IFBLOCK . error groupstat ENDIF
    (14) command -> IFBLOCK . RIGHT error groupstat ENDIF
    (15) command -> IFBLOCK . DOWN error groupstat ENDIF
    (16) command -> IFBLOCK . UP error groupstat ENDIF
    (17) command -> IFBLOCK . LEFT error

    RIGHT           shift and go to state 15
    DOWN            shift and go to state 16
    UP              shift and go to state 17
    LEFT            shift and go to state 18
    error           shift and go to state 19


state 5

    (28) command -> RIGHT . expr
    (32) command -> RIGHT . error
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    error           shift and go to state 21
    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 20
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 6

    (31) command -> DOWN . expr
    (35) command -> DOWN . error
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    error           shift and go to state 29
    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 28
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 7

    (30) command -> UP . expr
    (34) command -> UP . error
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    error           shift and go to state 31
    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 30
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 8

    (29) command -> LEFT . expr
    (33) command -> LEFT . error
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    error           shift and go to state 33
    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 32
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 9

    (18) command -> REPEAT . expr block ENDREPEAT
    (19) command -> REPEAT . error block ENDREPEAT
    (20) command -> REPEAT . error groupstat ENDREPEAT
    (21) command -> REPEAT . expr error groupstat ENDREPEAT
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    error           shift and go to state 35
    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 34
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 10

    (22) command -> PROCEDURE . ID block ENDPROC
    (23) command -> PROCEDURE . error block ENDPROC
    (24) command -> PROCEDURE . error groupstat ENDPROC
    (25) command -> PROCEDURE . ID error groupstat ENDPROC

    ID              shift and go to state 36
    error           shift and go to state 37


state 11

    (26) command -> CALL . ID
    (27) command -> CALL . error

    ID              shift and go to state 38
    error           shift and go to state 39


state 12

    (36) command -> SET . ID EQUALS expr
    (37) command -> SET . error
    (38) command -> SET . ID error
    (39) command -> SET . ID EQUALS error

    ID              shift and go to state 40
    error           shift and go to state 41


state 13

    (1) program -> program statement .

    IFBLOCK         reduce using rule 1 (program -> program statement .)
    REPEAT          reduce using rule 1 (program -> program statement .)
    PROCEDURE       reduce using rule 1 (program -> program statement .)
    CALL            reduce using rule 1 (program -> program statement .)
    RIGHT           reduce using rule 1 (program -> program statement .)
    LEFT            reduce using rule 1 (program -> program statement .)
    UP              reduce using rule 1 (program -> program statement .)
    DOWN            reduce using rule 1 (program -> program statement .)
    SET             reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 14

    (7) statement -> command NEWLINE .

    IFBLOCK         reduce using rule 7 (statement -> command NEWLINE .)
    REPEAT          reduce using rule 7 (statement -> command NEWLINE .)
    PROCEDURE       reduce using rule 7 (statement -> command NEWLINE .)
    CALL            reduce using rule 7 (statement -> command NEWLINE .)
    RIGHT           reduce using rule 7 (statement -> command NEWLINE .)
    LEFT            reduce using rule 7 (statement -> command NEWLINE .)
    UP              reduce using rule 7 (statement -> command NEWLINE .)
    DOWN            reduce using rule 7 (statement -> command NEWLINE .)
    SET             reduce using rule 7 (statement -> command NEWLINE .)
    $end            reduce using rule 7 (statement -> command NEWLINE .)
    ENDIF           reduce using rule 7 (statement -> command NEWLINE .)
    ENDREPEAT       reduce using rule 7 (statement -> command NEWLINE .)
    ENDPROC         reduce using rule 7 (statement -> command NEWLINE .)
    DEDENT          reduce using rule 7 (statement -> command NEWLINE .)


state 15

    (8) command -> IFBLOCK RIGHT . block ENDIF
    (14) command -> IFBLOCK RIGHT . error groupstat ENDIF
    (4) block -> . NEWLINE INDENT groupstat DEDENT

    error           shift and go to state 43
    NEWLINE         shift and go to state 44

    block                          shift and go to state 42

state 16

    (9) command -> IFBLOCK DOWN . block ENDIF
    (15) command -> IFBLOCK DOWN . error groupstat ENDIF
    (4) block -> . NEWLINE INDENT groupstat DEDENT

    error           shift and go to state 46
    NEWLINE         shift and go to state 44

    block                          shift and go to state 45

state 17

    (10) command -> IFBLOCK UP . block ENDIF
    (16) command -> IFBLOCK UP . error groupstat ENDIF
    (4) block -> . NEWLINE INDENT groupstat DEDENT

    error           shift and go to state 48
    NEWLINE         shift and go to state 44

    block                          shift and go to state 47

state 18

    (11) command -> IFBLOCK LEFT . block ENDIF
    (17) command -> IFBLOCK LEFT . error
    (4) block -> . NEWLINE INDENT groupstat DEDENT

    error           shift and go to state 50
    NEWLINE         shift and go to state 44

    block                          shift and go to state 49

state 19

    (12) command -> IFBLOCK error . block ENDIF
    (13) command -> IFBLOCK error . groupstat ENDIF
    (4) block -> . NEWLINE INDENT groupstat DEDENT
    (5) groupstat -> . groupstat statement
    (6) groupstat -> .

    NEWLINE         shift and go to state 44
    ENDIF           reduce using rule 6 (groupstat -> .)
    IFBLOCK         reduce using rule 6 (groupstat -> .)
    REPEAT          reduce using rule 6 (groupstat -> .)
    PROCEDURE       reduce using rule 6 (groupstat -> .)
    CALL            reduce using rule 6 (groupstat -> .)
    RIGHT           reduce using rule 6 (groupstat -> .)
    LEFT            reduce using rule 6 (groupstat -> .)
    UP              reduce using rule 6 (groupstat -> .)
    DOWN            reduce using rule 6 (groupstat -> .)
    SET             reduce using rule 6 (groupstat -> .)

    block                          shift and go to state 51
    groupstat                      shift and go to state 52

state 20

    (28) command -> RIGHT expr .
    (40) expr -> expr . PLUS factor
    (41) expr -> expr . MINUS factor

    NEWLINE         reduce using rule 28 (command -> RIGHT expr .)
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54


state 21

    (32) command -> RIGHT error .

    NEWLINE         reduce using rule 32 (command -> RIGHT error .)


state 22

    (42) expr -> factor .
    (44) factor -> factor . TIMES fact
    (45) factor -> factor . DIVIDE fact

    PLUS            reduce using rule 42 (expr -> factor .)
    MINUS           reduce using rule 42 (expr -> factor .)
    NEWLINE         reduce using rule 42 (expr -> factor .)
    error           reduce using rule 42 (expr -> factor .)
    RPAREN          reduce using rule 42 (expr -> factor .)
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56


state 23

    (43) expr -> MINUS . expr
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 57
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 24

    (46) factor -> fact .

    TIMES           reduce using rule 46 (factor -> fact .)
    DIVIDE          reduce using rule 46 (factor -> fact .)
    PLUS            reduce using rule 46 (factor -> fact .)
    MINUS           reduce using rule 46 (factor -> fact .)
    NEWLINE         reduce using rule 46 (factor -> fact .)
    error           reduce using rule 46 (factor -> fact .)
    RPAREN          reduce using rule 46 (factor -> fact .)


state 25

    (47) fact -> NUMBER .

    TIMES           reduce using rule 47 (fact -> NUMBER .)
    DIVIDE          reduce using rule 47 (fact -> NUMBER .)
    PLUS            reduce using rule 47 (fact -> NUMBER .)
    MINUS           reduce using rule 47 (fact -> NUMBER .)
    NEWLINE         reduce using rule 47 (fact -> NUMBER .)
    error           reduce using rule 47 (fact -> NUMBER .)
    RPAREN          reduce using rule 47 (fact -> NUMBER .)


state 26

    (48) fact -> ID .

    TIMES           reduce using rule 48 (fact -> ID .)
    DIVIDE          reduce using rule 48 (fact -> ID .)
    PLUS            reduce using rule 48 (fact -> ID .)
    MINUS           reduce using rule 48 (fact -> ID .)
    NEWLINE         reduce using rule 48 (fact -> ID .)
    error           reduce using rule 48 (fact -> ID .)
    RPAREN          reduce using rule 48 (fact -> ID .)


state 27

    (49) fact -> LPAREN . expr RPAREN
    (40) expr -> . expr PLUS factor
    (41) expr -> . expr MINUS factor
    (42) expr -> . factor
    (43) expr -> . MINUS expr
    (44) factor -> . factor TIMES fact
    (45) factor -> . factor DIVIDE fact
    (46) factor -> . fact
    (47) fact -> . NUMBER
    (48) fact -> . ID
    (49) fact -> . LPAREN expr RPAREN

    MINUS           shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 26
    LPAREN          shift and go to state 27

    expr                           shift and go to state 58
    factor                         shift and go to state 22
    fact                           shift and go to state 24

state 28

    (31) command -> DOWN expr .
    (40) expr -> expr . PLUS factor
    (41) expr -> expr . MINUS factor

    NEWLINE         reduce using rule 31 (command -> DOWN expr .)
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54


state 29

    (35) command -> DOWN error .

    NEWLINE         reduce using rule 35 (command -> DOWN error .)


state 30
